fixed redis config